k8s/pvc-inspector.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pvc-inspector
  namespace: loveable-clone
spec:
  containers:
    - name: inspector
      image: busybox
      command: ["sleep", "3600"]
      volumeMounts:
        - name: data
          mountPath: /data
  volumes:
    - name: data
      persistentVolumeClaim:
        claimName: pvc-44d2d019-526f-405d-b7ec-69fb4e5282b1
